kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: sre-test-pintu
spec:
  selector:
    app: go-service
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: sre-test-pintu
spec:
  selector:
    app: node-service
  ports:
  - port: 8080
    targetPort: 8080
